# npc-man

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  GtkUI.cpp  GtkUI.h  GtkWindowImp.cpp  GtkWindowImp.h  GuiBuilder.cpp  GuiBuilder.h  GuiFactory.cpp  GuiFactory.h  Widget.cpp  Widget.h  WidgetFactory.cpp  WidgetFactory.h  WidgetImp.cpp  WidgetImp.h  Widgets.cpp  Widgets.h  Window.cpp  Window.h  WindowImp.cpp  WindowImp.h  WindowSystem.cpp  WindowSystem.h  WindowSystemFactory.cpp  WindowSystemFactory.h
src/logging/: CMakeLists.txt  Logger.cpp  Logger.h
